# serializer version: 1
# name: test_parse_devices
  dict({
    'air_temp': dict({
      'label': 'Air Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '93',
      'value_translated': None,
    }),
    'aux_1': dict({
      'is_on': False,
      'label': 'Cleaner',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_2': dict({
      'is_on': False,
      'label': 'Sheer Dscnts',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_3': dict({
      'is_on': False,
      'label': 'Aux3',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_4': dict({
      'is_on': False,
      'label': 'Aux V1',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_5': dict({
      'is_on': False,
      'label': 'Aux V2',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_6': dict({
      'is_on': False,
      'label': 'Aux V3',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_7': dict({
      'is_on': False,
      'label': 'Aux V4',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B1': dict({
      'is_on': False,
      'label': 'Aux V5',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B2': dict({
      'is_on': False,
      'label': 'Aux V6',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B3': dict({
      'is_on': False,
      'label': 'Aux V7',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B4': dict({
      'is_on': False,
      'label': 'Aux V8',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B5': dict({
      'is_on': False,
      'label': 'Aux V9',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B6': dict({
      'is_on': False,
      'label': 'Aux V10',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B7': dict({
      'is_on': False,
      'label': 'Aux V11',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B8': dict({
      'is_on': False,
      'label': 'Aux V12',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C1': dict({
      'is_on': False,
      'label': 'Aux V13',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C2': dict({
      'is_on': False,
      'label': 'Aux V14',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C3': dict({
      'is_on': False,
      'label': 'Aux V15',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C4': dict({
      'is_on': False,
      'label': 'Aux V16',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C5': dict({
      'is_on': False,
      'label': 'Aux V17',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C6': dict({
      'is_on': False,
      'label': 'Aux V18',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C7': dict({
      'is_on': False,
      'label': 'Aux V19',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C8': dict({
      'is_on': False,
      'label': 'Aux V20',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D1': dict({
      'is_on': False,
      'label': 'Aux V21',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D2': dict({
      'is_on': False,
      'label': 'Aux V22',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D3': dict({
      'is_on': False,
      'label': 'Aux V23',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D4': dict({
      'is_on': False,
      'label': 'Aux V24',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D5': dict({
      'is_on': False,
      'label': 'Aux V25',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D6': dict({
      'is_on': False,
      'label': 'Aux V26',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D7': dict({
      'is_on': False,
      'label': 'Aux V27',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D8': dict({
      'is_on': False,
      'label': 'Aux V28',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_EA': dict({
      'is_on': False,
      'label': 'Extra Aux',
      'type': 'IaquaAuxSwitch',
    }),
    'cover_pool': dict({
      'label': 'Pool Cover',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'freeze_protection': dict({
      'is_on': False,
      'label': 'Freeze Protection',
      'type': 'IaquaBinarySensor',
    }),
    'heatpump': dict({
      'is_on': False,
      'label': 'Heat Pump',
      'type': 'IaquaHeatPump',
    }),
    'heatpump_status': dict({
      'label': 'Heat Pump Status',
      'type': 'IaquaHeatPumpStatusSensor',
      'unit_of_measurement': None,
      'value': 'off',
      'value_translated': 'OFF',
    }),
    'icl_zone_1': dict({
      'brightness_percentage': 100,
      'effect': None,
      'effect_list': list([
        'Off',
        'Alpine White',
        'Sky Blue',
        'Cobalt Blue',
        'Caribbean Blue',
        'Spring Green',
        'Emerald Green',
        'Emerald Rose',
        'Ruby Red',
        'Magenta',
        'Violet',
        'Slow Color Splash',
        'Fast Color Splash',
        'America The Beautiful',
        'Fat Tuesday',
        'Disco Tech',
      ]),
      'is_on': False,
      'label': 'Light Zone 1',
      'rgbw': tuple(
        0,
        0,
        0,
        0,
      ),
      'type': 'IaquaIclLight',
    }),
    'is_icl_present': dict({
      'is_on': True,
      'label': 'ICL Present',
      'type': 'IaquaPresenceSensor',
    }),
    'orp': dict({
      'label': 'ORP',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'ph': dict({
      'label': 'pH',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_heater': dict({
      'is_on': False,
      'label': 'Pool Heater',
      'type': 'IaquaHeater',
    }),
    'pool_pump': dict({
      'is_on': True,
      'label': 'Pool Pump',
      'type': 'IaquaSwitch',
    }),
    'pool_salinity': dict({
      'label': 'Pool Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_set_point': dict({
      'current_value': 48.0,
      'label': 'Pool Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'pool_temp': dict({
      'label': 'Pool Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '89',
      'value_translated': None,
    }),
    'pool_thermostat': dict({
      'current_temperature': '89',
      'is_on': False,
      'label': 'Pool Thermostat',
      'target_temperature': '48',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'relay_count': dict({
      'label': 'Relay Count',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '4',
      'value_translated': None,
    }),
    'solar_heater': dict({
      'is_on': False,
      'label': 'Solar Heater',
      'type': 'IaquaHeater',
    }),
    'spa_heater': dict({
      'is_on': False,
      'label': 'Spa Heater',
      'type': 'IaquaHeater',
    }),
    'spa_pump': dict({
      'is_on': False,
      'label': 'Spa Pump',
      'type': 'IaquaSwitch',
    }),
    'spa_salinity': dict({
      'label': 'Spa Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_set_point': dict({
      'current_value': 54.0,
      'label': 'Spa Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'spa_temp': dict({
      'label': 'Spa Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_thermostat': dict({
      'current_temperature': '',
      'is_on': False,
      'label': 'Spa Thermostat',
      'target_temperature': '54',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'swc_boost': dict({
      'is_on': False,
      'label': 'Swc Boost',
      'type': 'IaquaBinarySensor',
    }),
    'swc_low': dict({
      'is_on': False,
      'label': 'Swc Low',
      'type': 'IaquaBinarySensor',
    }),
    'swc_pool_status': dict({
      'label': 'Swc Pool Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'running',
      'value_translated': None,
    }),
    'swc_pool_value': dict({
      'label': 'Swc Pool Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_set_point': dict({
      'label': 'Swc Set Point',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_spa_status': dict({
      'label': 'Swc Spa Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'standby',
      'value_translated': None,
    }),
    'swc_spa_value': dict({
      'label': 'Swc Spa Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
  })
# ---
# name: test_parse_devices_icl_zones
  dict({
    'air_temp': dict({
      'label': 'Air Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '93',
      'value_translated': None,
    }),
    'aux_1': dict({
      'is_on': False,
      'label': 'Cleaner',
      'type': 'IaquaAuxSwitch',
    }),
    'cover_pool': dict({
      'label': 'Pool Cover',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'freeze_protection': dict({
      'is_on': False,
      'label': 'Freeze Protection',
      'type': 'IaquaBinarySensor',
    }),
    'heatpump': dict({
      'is_on': False,
      'label': 'Heat Pump',
      'type': 'IaquaHeatPump',
    }),
    'heatpump_status': dict({
      'label': 'Heat Pump Status',
      'type': 'IaquaHeatPumpStatusSensor',
      'unit_of_measurement': None,
      'value': 'off',
      'value_translated': 'OFF',
    }),
    'icl_zone_1': dict({
      'brightness_percentage': 100,
      'effect': 'Cobalt Blue',
      'effect_list': list([
        'Off',
        'Alpine White',
        'Sky Blue',
        'Cobalt Blue',
        'Caribbean Blue',
        'Spring Green',
        'Emerald Green',
        'Emerald Rose',
        'Ruby Red',
        'Magenta',
        'Violet',
        'Slow Color Splash',
        'Fast Color Splash',
        'America The Beautiful',
        'Fat Tuesday',
        'Disco Tech',
      ]),
      'is_on': False,
      'label': 'Light Zone 1',
      'rgbw': tuple(
        247,
        255,
        244,
        0,
      ),
      'type': 'IaquaIclLight',
    }),
    'icl_zone_2': dict({
      'brightness_percentage': 75,
      'effect': 'Spring Green',
      'effect_list': list([
        'Off',
        'Alpine White',
        'Sky Blue',
        'Cobalt Blue',
        'Caribbean Blue',
        'Spring Green',
        'Emerald Green',
        'Emerald Rose',
        'Ruby Red',
        'Magenta',
        'Violet',
        'Slow Color Splash',
        'Fast Color Splash',
        'America The Beautiful',
        'Fat Tuesday',
        'Disco Tech',
      ]),
      'is_on': True,
      'label': 'Spa Light',
      'rgbw': tuple(
        0,
        255,
        128,
        0,
      ),
      'type': 'IaquaIclLight',
    }),
    'is_icl_present': dict({
      'is_on': True,
      'label': 'ICL Present',
      'type': 'IaquaPresenceSensor',
    }),
    'orp': dict({
      'label': 'ORP',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'ph': dict({
      'label': 'pH',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_heater': dict({
      'is_on': False,
      'label': 'Pool Heater',
      'type': 'IaquaHeater',
    }),
    'pool_pump': dict({
      'is_on': True,
      'label': 'Pool Pump',
      'type': 'IaquaSwitch',
    }),
    'pool_salinity': dict({
      'label': 'Pool Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_set_point': dict({
      'current_value': 48.0,
      'label': 'Pool Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'pool_temp': dict({
      'label': 'Pool Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '89',
      'value_translated': None,
    }),
    'pool_thermostat': dict({
      'current_temperature': '89',
      'is_on': False,
      'label': 'Pool Thermostat',
      'target_temperature': '48',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'relay_count': dict({
      'label': 'Relay Count',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '4',
      'value_translated': None,
    }),
    'solar_heater': dict({
      'is_on': False,
      'label': 'Solar Heater',
      'type': 'IaquaHeater',
    }),
    'spa_heater': dict({
      'is_on': False,
      'label': 'Spa Heater',
      'type': 'IaquaHeater',
    }),
    'spa_pump': dict({
      'is_on': False,
      'label': 'Spa Pump',
      'type': 'IaquaSwitch',
    }),
    'spa_salinity': dict({
      'label': 'Spa Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_set_point': dict({
      'current_value': 54.0,
      'label': 'Spa Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'spa_temp': dict({
      'label': 'Spa Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_thermostat': dict({
      'current_temperature': '',
      'is_on': False,
      'label': 'Spa Thermostat',
      'target_temperature': '54',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'swc_boost': dict({
      'is_on': False,
      'label': 'Swc Boost',
      'type': 'IaquaBinarySensor',
    }),
    'swc_low': dict({
      'is_on': False,
      'label': 'Swc Low',
      'type': 'IaquaBinarySensor',
    }),
    'swc_pool_status': dict({
      'label': 'Swc Pool Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'running',
      'value_translated': None,
    }),
    'swc_pool_value': dict({
      'label': 'Swc Pool Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_set_point': dict({
      'label': 'Swc Set Point',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_spa_status': dict({
      'label': 'Swc Spa Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'standby',
      'value_translated': None,
    }),
    'swc_spa_value': dict({
      'label': 'Swc Spa Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
  })
# ---
# name: test_parse_home
  dict({
    'air_temp': dict({
      'label': 'Air Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '93',
      'value_translated': None,
    }),
    'cover_pool': dict({
      'label': 'Pool Cover',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'freeze_protection': dict({
      'is_on': False,
      'label': 'Freeze Protection',
      'type': 'IaquaBinarySensor',
    }),
    'heatpump': dict({
      'is_on': False,
      'label': 'Heat Pump',
      'type': 'IaquaHeatPump',
    }),
    'heatpump_status': dict({
      'label': 'Heat Pump Status',
      'type': 'IaquaHeatPumpStatusSensor',
      'unit_of_measurement': None,
      'value': 'off',
      'value_translated': 'OFF',
    }),
    'is_icl_present': dict({
      'is_on': True,
      'label': 'ICL Present',
      'type': 'IaquaPresenceSensor',
    }),
    'orp': dict({
      'label': 'ORP',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'ph': dict({
      'label': 'pH',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_heater': dict({
      'is_on': False,
      'label': 'Pool Heater',
      'type': 'IaquaHeater',
    }),
    'pool_pump': dict({
      'is_on': True,
      'label': 'Pool Pump',
      'type': 'IaquaSwitch',
    }),
    'pool_salinity': dict({
      'label': 'Pool Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_set_point': dict({
      'current_value': 48.0,
      'label': 'Pool Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'pool_temp': dict({
      'label': 'Pool Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '89',
      'value_translated': None,
    }),
    'pool_thermostat': dict({
      'current_temperature': '89',
      'is_on': False,
      'label': 'Pool Thermostat',
      'target_temperature': '48',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'relay_count': dict({
      'label': 'Relay Count',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '4',
      'value_translated': None,
    }),
    'solar_heater': dict({
      'is_on': False,
      'label': 'Solar Heater',
      'type': 'IaquaHeater',
    }),
    'spa_heater': dict({
      'is_on': False,
      'label': 'Spa Heater',
      'type': 'IaquaHeater',
    }),
    'spa_pump': dict({
      'is_on': False,
      'label': 'Spa Pump',
      'type': 'IaquaSwitch',
    }),
    'spa_salinity': dict({
      'label': 'Spa Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_set_point': dict({
      'current_value': 54.0,
      'label': 'Spa Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'spa_temp': dict({
      'label': 'Spa Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_thermostat': dict({
      'current_temperature': '',
      'is_on': False,
      'label': 'Spa Thermostat',
      'target_temperature': '54',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'swc_boost': dict({
      'is_on': False,
      'label': 'Swc Boost',
      'type': 'IaquaBinarySensor',
    }),
    'swc_low': dict({
      'is_on': False,
      'label': 'Swc Low',
      'type': 'IaquaBinarySensor',
    }),
    'swc_pool_status': dict({
      'label': 'Swc Pool Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'running',
      'value_translated': None,
    }),
    'swc_pool_value': dict({
      'label': 'Swc Pool Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_set_point': dict({
      'label': 'Swc Set Point',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_spa_status': dict({
      'label': 'Swc Spa Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'standby',
      'value_translated': None,
    }),
    'swc_spa_value': dict({
      'label': 'Swc Spa Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
  })
# ---
# name: test_parse_onetouch
  dict({
    'onetouch_1': dict({
      'is_on': False,
      'label': 'All Off',
      'type': 'IaquaOneTouchSwitch',
    }),
    'onetouch_2': dict({
      'is_on': False,
      'label': 'Spa Mode',
      'type': 'IaquaOneTouchSwitch',
    }),
    'onetouch_3': dict({
      'is_on': False,
      'label': 'Clean Mode',
      'type': 'IaquaOneTouchSwitch',
    }),
    'onetouch_5': dict({
      'is_on': False,
      'label': 'Onetouch 5',
      'type': 'IaquaOneTouchSwitch',
    }),
    'onetouch_6': dict({
      'is_on': False,
      'label': 'Water Falls',
      'type': 'IaquaOneTouchSwitch',
    }),
  })
# ---
# name: test_parse_swc_config
  dict({
    'air_temp': dict({
      'label': 'Air Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '93',
      'value_translated': None,
    }),
    'aux_1': dict({
      'is_on': False,
      'label': 'Cleaner',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_2': dict({
      'is_on': False,
      'label': 'Sheer Dscnts',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_3': dict({
      'is_on': False,
      'label': 'Aux3',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_4': dict({
      'is_on': False,
      'label': 'Aux V1',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_5': dict({
      'is_on': False,
      'label': 'Aux V2',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_6': dict({
      'is_on': False,
      'label': 'Aux V3',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_7': dict({
      'is_on': False,
      'label': 'Aux V4',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B1': dict({
      'is_on': False,
      'label': 'Aux V5',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B2': dict({
      'is_on': False,
      'label': 'Aux V6',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B3': dict({
      'is_on': False,
      'label': 'Aux V7',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B4': dict({
      'is_on': False,
      'label': 'Aux V8',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B5': dict({
      'is_on': False,
      'label': 'Aux V9',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B6': dict({
      'is_on': False,
      'label': 'Aux V10',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B7': dict({
      'is_on': False,
      'label': 'Aux V11',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B8': dict({
      'is_on': False,
      'label': 'Aux V12',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C1': dict({
      'is_on': False,
      'label': 'Aux V13',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C2': dict({
      'is_on': False,
      'label': 'Aux V14',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C3': dict({
      'is_on': False,
      'label': 'Aux V15',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C4': dict({
      'is_on': False,
      'label': 'Aux V16',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C5': dict({
      'is_on': False,
      'label': 'Aux V17',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C6': dict({
      'is_on': False,
      'label': 'Aux V18',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C7': dict({
      'is_on': False,
      'label': 'Aux V19',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C8': dict({
      'is_on': False,
      'label': 'Aux V20',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D1': dict({
      'is_on': False,
      'label': 'Aux V21',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D2': dict({
      'is_on': False,
      'label': 'Aux V22',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D3': dict({
      'is_on': False,
      'label': 'Aux V23',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D4': dict({
      'is_on': False,
      'label': 'Aux V24',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D5': dict({
      'is_on': False,
      'label': 'Aux V25',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D6': dict({
      'is_on': False,
      'label': 'Aux V26',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D7': dict({
      'is_on': False,
      'label': 'Aux V27',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D8': dict({
      'is_on': False,
      'label': 'Aux V28',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_EA': dict({
      'is_on': False,
      'label': 'Extra Aux',
      'type': 'IaquaAuxSwitch',
    }),
    'cover_pool': dict({
      'label': 'Pool Cover',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'freeze_protection': dict({
      'is_on': False,
      'label': 'Freeze Protection',
      'type': 'IaquaBinarySensor',
    }),
    'heatpump': dict({
      'is_on': False,
      'label': 'Heat Pump',
      'type': 'IaquaHeatPump',
    }),
    'heatpump_status': dict({
      'label': 'Heat Pump Status',
      'type': 'IaquaHeatPumpStatusSensor',
      'unit_of_measurement': None,
      'value': 'off',
      'value_translated': 'OFF',
    }),
    'icl_zone_1': dict({
      'brightness_percentage': 100,
      'effect': None,
      'effect_list': list([
        'Off',
        'Alpine White',
        'Sky Blue',
        'Cobalt Blue',
        'Caribbean Blue',
        'Spring Green',
        'Emerald Green',
        'Emerald Rose',
        'Ruby Red',
        'Magenta',
        'Violet',
        'Slow Color Splash',
        'Fast Color Splash',
        'America The Beautiful',
        'Fat Tuesday',
        'Disco Tech',
      ]),
      'is_on': False,
      'label': 'Light Zone 1',
      'rgbw': tuple(
        0,
        0,
        0,
        0,
      ),
      'type': 'IaquaIclLight',
    }),
    'is_icl_present': dict({
      'is_on': True,
      'label': 'ICL Present',
      'type': 'IaquaPresenceSensor',
    }),
    'orp': dict({
      'label': 'ORP',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'ph': dict({
      'label': 'pH',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_heater': dict({
      'is_on': False,
      'label': 'Pool Heater',
      'type': 'IaquaHeater',
    }),
    'pool_pump': dict({
      'is_on': True,
      'label': 'Pool Pump',
      'type': 'IaquaSwitch',
    }),
    'pool_salinity': dict({
      'label': 'Pool Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_set_point': dict({
      'current_value': 48.0,
      'label': 'Pool Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'pool_temp': dict({
      'label': 'Pool Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '89',
      'value_translated': None,
    }),
    'pool_thermostat': dict({
      'current_temperature': '89',
      'is_on': False,
      'label': 'Pool Thermostat',
      'target_temperature': '48',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'relay_count': dict({
      'label': 'Relay Count',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '4',
      'value_translated': None,
    }),
    'solar_heater': dict({
      'is_on': False,
      'label': 'Solar Heater',
      'type': 'IaquaHeater',
    }),
    'spa_heater': dict({
      'is_on': False,
      'label': 'Spa Heater',
      'type': 'IaquaHeater',
    }),
    'spa_pump': dict({
      'is_on': False,
      'label': 'Spa Pump',
      'type': 'IaquaSwitch',
    }),
    'spa_salinity': dict({
      'label': 'Spa Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_set_point': dict({
      'current_value': 54.0,
      'label': 'Spa Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'spa_temp': dict({
      'label': 'Spa Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_thermostat': dict({
      'current_temperature': '',
      'is_on': False,
      'label': 'Spa Thermostat',
      'target_temperature': '54',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'swc_boost': dict({
      'is_on': False,
      'label': 'Swc Boost',
      'type': 'IaquaBinarySensor',
    }),
    'swc_boost_dip_switch': dict({
      'is_on': True,
      'label': 'Swc Boost Dip Switch',
      'type': 'IaquaBinarySensor',
    }),
    'swc_boost_hrs': dict({
      'label': 'Boost Hours',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '24',
      'value_translated': None,
    }),
    'swc_boost_mode': dict({
      'label': 'Boost Mode',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'pool',
      'value_translated': None,
    }),
    'swc_boost_pause': dict({
      'label': 'Boost Pause',
      'type': 'IaquaSwcBoostPauseButton',
    }),
    'swc_boost_resume': dict({
      'label': 'Boost Resume',
      'type': 'IaquaSwcBoostResumeButton',
    }),
    'swc_boost_start': dict({
      'label': 'Boost Start',
      'type': 'IaquaSwcBoostStartButton',
    }),
    'swc_boost_stop': dict({
      'label': 'Boost Stop',
      'type': 'IaquaSwcBoostStopButton',
    }),
    'swc_low': dict({
      'is_on': False,
      'label': 'Swc Low',
      'type': 'IaquaBinarySensor',
    }),
    'swc_pool_set_point': dict({
      'current_value': 50.0,
      'label': 'Swc Pool Set Point',
      'max_value': 100.0,
      'min_value': 0.0,
      'step': 1.0,
      'type': 'IaquaSwcSetPoint',
      'unit_of_measurement': None,
    }),
    'swc_pool_status': dict({
      'label': 'Swc Pool Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'running',
      'value_translated': None,
    }),
    'swc_pool_value': dict({
      'label': 'Swc Pool Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_remaining_boost_hrs': dict({
      'label': 'Swc Remaining Boost Hrs',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '0',
      'value_translated': None,
    }),
    'swc_remaining_boost_mins': dict({
      'label': 'Swc Remaining Boost Mins',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '0',
      'value_translated': None,
    }),
    'swc_set_point': dict({
      'label': 'Swc Set Point',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_spa_set_point': dict({
      'current_value': 50.0,
      'label': 'Swc Spa Set Point',
      'max_value': 100.0,
      'min_value': 0.0,
      'step': 1.0,
      'type': 'IaquaSwcSetPoint',
      'unit_of_measurement': None,
    }),
    'swc_spa_status': dict({
      'label': 'Swc Spa Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'standby',
      'value_translated': None,
    }),
    'swc_spa_value': dict({
      'label': 'Swc Spa Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
  })
# ---
# name: test_parse_swc_config_after_set
  dict({
    'air_temp': dict({
      'label': 'Air Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '93',
      'value_translated': None,
    }),
    'aux_1': dict({
      'is_on': False,
      'label': 'Cleaner',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_2': dict({
      'is_on': False,
      'label': 'Sheer Dscnts',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_3': dict({
      'is_on': False,
      'label': 'Aux3',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_4': dict({
      'is_on': False,
      'label': 'Aux V1',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_5': dict({
      'is_on': False,
      'label': 'Aux V2',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_6': dict({
      'is_on': False,
      'label': 'Aux V3',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_7': dict({
      'is_on': False,
      'label': 'Aux V4',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B1': dict({
      'is_on': False,
      'label': 'Aux V5',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B2': dict({
      'is_on': False,
      'label': 'Aux V6',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B3': dict({
      'is_on': False,
      'label': 'Aux V7',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B4': dict({
      'is_on': False,
      'label': 'Aux V8',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B5': dict({
      'is_on': False,
      'label': 'Aux V9',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B6': dict({
      'is_on': False,
      'label': 'Aux V10',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B7': dict({
      'is_on': False,
      'label': 'Aux V11',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B8': dict({
      'is_on': False,
      'label': 'Aux V12',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C1': dict({
      'is_on': False,
      'label': 'Aux V13',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C2': dict({
      'is_on': False,
      'label': 'Aux V14',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C3': dict({
      'is_on': False,
      'label': 'Aux V15',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C4': dict({
      'is_on': False,
      'label': 'Aux V16',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C5': dict({
      'is_on': False,
      'label': 'Aux V17',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C6': dict({
      'is_on': False,
      'label': 'Aux V18',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C7': dict({
      'is_on': False,
      'label': 'Aux V19',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C8': dict({
      'is_on': False,
      'label': 'Aux V20',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D1': dict({
      'is_on': False,
      'label': 'Aux V21',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D2': dict({
      'is_on': False,
      'label': 'Aux V22',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D3': dict({
      'is_on': False,
      'label': 'Aux V23',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D4': dict({
      'is_on': False,
      'label': 'Aux V24',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D5': dict({
      'is_on': False,
      'label': 'Aux V25',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D6': dict({
      'is_on': False,
      'label': 'Aux V26',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D7': dict({
      'is_on': False,
      'label': 'Aux V27',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D8': dict({
      'is_on': False,
      'label': 'Aux V28',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_EA': dict({
      'is_on': False,
      'label': 'Extra Aux',
      'type': 'IaquaAuxSwitch',
    }),
    'cover_pool': dict({
      'label': 'Pool Cover',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'freeze_protection': dict({
      'is_on': False,
      'label': 'Freeze Protection',
      'type': 'IaquaBinarySensor',
    }),
    'heatpump': dict({
      'is_on': False,
      'label': 'Heat Pump',
      'type': 'IaquaHeatPump',
    }),
    'heatpump_status': dict({
      'label': 'Heat Pump Status',
      'type': 'IaquaHeatPumpStatusSensor',
      'unit_of_measurement': None,
      'value': 'off',
      'value_translated': 'OFF',
    }),
    'icl_zone_1': dict({
      'brightness_percentage': 100,
      'effect': None,
      'effect_list': list([
        'Off',
        'Alpine White',
        'Sky Blue',
        'Cobalt Blue',
        'Caribbean Blue',
        'Spring Green',
        'Emerald Green',
        'Emerald Rose',
        'Ruby Red',
        'Magenta',
        'Violet',
        'Slow Color Splash',
        'Fast Color Splash',
        'America The Beautiful',
        'Fat Tuesday',
        'Disco Tech',
      ]),
      'is_on': False,
      'label': 'Light Zone 1',
      'rgbw': tuple(
        0,
        0,
        0,
        0,
      ),
      'type': 'IaquaIclLight',
    }),
    'is_icl_present': dict({
      'is_on': True,
      'label': 'ICL Present',
      'type': 'IaquaPresenceSensor',
    }),
    'orp': dict({
      'label': 'ORP',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'ph': dict({
      'label': 'pH',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_heater': dict({
      'is_on': False,
      'label': 'Pool Heater',
      'type': 'IaquaHeater',
    }),
    'pool_pump': dict({
      'is_on': True,
      'label': 'Pool Pump',
      'type': 'IaquaSwitch',
    }),
    'pool_salinity': dict({
      'label': 'Pool Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_set_point': dict({
      'current_value': 48.0,
      'label': 'Pool Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'pool_temp': dict({
      'label': 'Pool Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '89',
      'value_translated': None,
    }),
    'pool_thermostat': dict({
      'current_temperature': '89',
      'is_on': False,
      'label': 'Pool Thermostat',
      'target_temperature': '48',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'relay_count': dict({
      'label': 'Relay Count',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '4',
      'value_translated': None,
    }),
    'solar_heater': dict({
      'is_on': False,
      'label': 'Solar Heater',
      'type': 'IaquaHeater',
    }),
    'spa_heater': dict({
      'is_on': False,
      'label': 'Spa Heater',
      'type': 'IaquaHeater',
    }),
    'spa_pump': dict({
      'is_on': False,
      'label': 'Spa Pump',
      'type': 'IaquaSwitch',
    }),
    'spa_salinity': dict({
      'label': 'Spa Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_set_point': dict({
      'current_value': 54.0,
      'label': 'Spa Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'spa_temp': dict({
      'label': 'Spa Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_thermostat': dict({
      'current_temperature': '',
      'is_on': False,
      'label': 'Spa Thermostat',
      'target_temperature': '54',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'swc_boost': dict({
      'is_on': False,
      'label': 'Swc Boost',
      'type': 'IaquaBinarySensor',
    }),
    'swc_boost_dip_switch': dict({
      'is_on': True,
      'label': 'Swc Boost Dip Switch',
      'type': 'IaquaBinarySensor',
    }),
    'swc_boost_hrs': dict({
      'label': 'Boost Hours',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '24',
      'value_translated': None,
    }),
    'swc_boost_mode': dict({
      'label': 'Boost Mode',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'pool',
      'value_translated': None,
    }),
    'swc_boost_pause': dict({
      'label': 'Boost Pause',
      'type': 'IaquaSwcBoostPauseButton',
    }),
    'swc_boost_resume': dict({
      'label': 'Boost Resume',
      'type': 'IaquaSwcBoostResumeButton',
    }),
    'swc_boost_start': dict({
      'label': 'Boost Start',
      'type': 'IaquaSwcBoostStartButton',
    }),
    'swc_boost_stop': dict({
      'label': 'Boost Stop',
      'type': 'IaquaSwcBoostStopButton',
    }),
    'swc_low': dict({
      'is_on': False,
      'label': 'Swc Low',
      'type': 'IaquaBinarySensor',
    }),
    'swc_pool_set_point': dict({
      'current_value': 60.0,
      'label': 'Swc Pool Set Point',
      'max_value': 100.0,
      'min_value': 0.0,
      'step': 1.0,
      'type': 'IaquaSwcSetPoint',
      'unit_of_measurement': None,
    }),
    'swc_pool_status': dict({
      'label': 'Swc Pool Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'running',
      'value_translated': None,
    }),
    'swc_pool_value': dict({
      'label': 'Swc Pool Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_remaining_boost_hrs': dict({
      'label': 'Swc Remaining Boost Hrs',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '0',
      'value_translated': None,
    }),
    'swc_remaining_boost_mins': dict({
      'label': 'Swc Remaining Boost Mins',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '0',
      'value_translated': None,
    }),
    'swc_set_point': dict({
      'label': 'Swc Set Point',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_spa_set_point': dict({
      'current_value': 60.0,
      'label': 'Swc Spa Set Point',
      'max_value': 100.0,
      'min_value': 0.0,
      'step': 1.0,
      'type': 'IaquaSwcSetPoint',
      'unit_of_measurement': None,
    }),
    'swc_spa_status': dict({
      'label': 'Swc Spa Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'standby',
      'value_translated': None,
    }),
    'swc_spa_value': dict({
      'label': 'Swc Spa Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
  })
# ---
# name: test_parse_swc_config_boost_on
  dict({
    'air_temp': dict({
      'label': 'Air Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '93',
      'value_translated': None,
    }),
    'aux_1': dict({
      'is_on': False,
      'label': 'Cleaner',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_2': dict({
      'is_on': False,
      'label': 'Sheer Dscnts',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_3': dict({
      'is_on': False,
      'label': 'Aux3',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_4': dict({
      'is_on': False,
      'label': 'Aux V1',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_5': dict({
      'is_on': False,
      'label': 'Aux V2',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_6': dict({
      'is_on': False,
      'label': 'Aux V3',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_7': dict({
      'is_on': False,
      'label': 'Aux V4',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B1': dict({
      'is_on': False,
      'label': 'Aux V5',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B2': dict({
      'is_on': False,
      'label': 'Aux V6',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B3': dict({
      'is_on': False,
      'label': 'Aux V7',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B4': dict({
      'is_on': False,
      'label': 'Aux V8',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B5': dict({
      'is_on': False,
      'label': 'Aux V9',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B6': dict({
      'is_on': False,
      'label': 'Aux V10',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B7': dict({
      'is_on': False,
      'label': 'Aux V11',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_B8': dict({
      'is_on': False,
      'label': 'Aux V12',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C1': dict({
      'is_on': False,
      'label': 'Aux V13',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C2': dict({
      'is_on': False,
      'label': 'Aux V14',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C3': dict({
      'is_on': False,
      'label': 'Aux V15',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C4': dict({
      'is_on': False,
      'label': 'Aux V16',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C5': dict({
      'is_on': False,
      'label': 'Aux V17',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C6': dict({
      'is_on': False,
      'label': 'Aux V18',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C7': dict({
      'is_on': False,
      'label': 'Aux V19',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_C8': dict({
      'is_on': False,
      'label': 'Aux V20',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D1': dict({
      'is_on': False,
      'label': 'Aux V21',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D2': dict({
      'is_on': False,
      'label': 'Aux V22',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D3': dict({
      'is_on': False,
      'label': 'Aux V23',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D4': dict({
      'is_on': False,
      'label': 'Aux V24',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D5': dict({
      'is_on': False,
      'label': 'Aux V25',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D6': dict({
      'is_on': False,
      'label': 'Aux V26',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D7': dict({
      'is_on': False,
      'label': 'Aux V27',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_D8': dict({
      'is_on': False,
      'label': 'Aux V28',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_EA': dict({
      'is_on': False,
      'label': 'Extra Aux',
      'type': 'IaquaAuxSwitch',
    }),
    'cover_pool': dict({
      'label': 'Pool Cover',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'freeze_protection': dict({
      'is_on': False,
      'label': 'Freeze Protection',
      'type': 'IaquaBinarySensor',
    }),
    'heatpump': dict({
      'is_on': False,
      'label': 'Heat Pump',
      'type': 'IaquaHeatPump',
    }),
    'heatpump_status': dict({
      'label': 'Heat Pump Status',
      'type': 'IaquaHeatPumpStatusSensor',
      'unit_of_measurement': None,
      'value': 'off',
      'value_translated': 'OFF',
    }),
    'icl_zone_1': dict({
      'brightness_percentage': 100,
      'effect': None,
      'effect_list': list([
        'Off',
        'Alpine White',
        'Sky Blue',
        'Cobalt Blue',
        'Caribbean Blue',
        'Spring Green',
        'Emerald Green',
        'Emerald Rose',
        'Ruby Red',
        'Magenta',
        'Violet',
        'Slow Color Splash',
        'Fast Color Splash',
        'America The Beautiful',
        'Fat Tuesday',
        'Disco Tech',
      ]),
      'is_on': False,
      'label': 'Light Zone 1',
      'rgbw': tuple(
        0,
        0,
        0,
        0,
      ),
      'type': 'IaquaIclLight',
    }),
    'is_icl_present': dict({
      'is_on': True,
      'label': 'ICL Present',
      'type': 'IaquaPresenceSensor',
    }),
    'orp': dict({
      'label': 'ORP',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'ph': dict({
      'label': 'pH',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_heater': dict({
      'is_on': False,
      'label': 'Pool Heater',
      'type': 'IaquaHeater',
    }),
    'pool_pump': dict({
      'is_on': True,
      'label': 'Pool Pump',
      'type': 'IaquaSwitch',
    }),
    'pool_salinity': dict({
      'label': 'Pool Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'pool_set_point': dict({
      'current_value': 48.0,
      'label': 'Pool Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'pool_temp': dict({
      'label': 'Pool Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '89',
      'value_translated': None,
    }),
    'pool_thermostat': dict({
      'current_temperature': '89',
      'is_on': False,
      'label': 'Pool Thermostat',
      'target_temperature': '48',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'relay_count': dict({
      'label': 'Relay Count',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '4',
      'value_translated': None,
    }),
    'solar_heater': dict({
      'is_on': False,
      'label': 'Solar Heater',
      'type': 'IaquaHeater',
    }),
    'spa_heater': dict({
      'is_on': False,
      'label': 'Spa Heater',
      'type': 'IaquaHeater',
    }),
    'spa_pump': dict({
      'is_on': False,
      'label': 'Spa Pump',
      'type': 'IaquaSwitch',
    }),
    'spa_salinity': dict({
      'label': 'Spa Salinity',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_set_point': dict({
      'current_value': 54.0,
      'label': 'Spa Set Point',
      'max_value': 104.0,
      'min_value': 34.0,
      'step': 1.0,
      'type': 'IaquaSetPoint',
      'unit_of_measurement': '°F',
    }),
    'spa_temp': dict({
      'label': 'Spa Temperature',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'spa_thermostat': dict({
      'current_temperature': '',
      'is_on': False,
      'label': 'Spa Thermostat',
      'target_temperature': '54',
      'temperature_unit': 'F',
      'type': 'IaquaClimate',
    }),
    'swc_boost': dict({
      'is_on': True,
      'label': 'Swc Boost',
      'type': 'IaquaBinarySensor',
    }),
    'swc_boost_dip_switch': dict({
      'is_on': True,
      'label': 'Swc Boost Dip Switch',
      'type': 'IaquaBinarySensor',
    }),
    'swc_boost_hrs': dict({
      'label': 'Boost Hours',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '24',
      'value_translated': None,
    }),
    'swc_boost_mode': dict({
      'label': 'Boost Mode',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'pool',
      'value_translated': None,
    }),
    'swc_boost_pause': dict({
      'label': 'Boost Pause',
      'type': 'IaquaSwcBoostPauseButton',
    }),
    'swc_boost_resume': dict({
      'label': 'Boost Resume',
      'type': 'IaquaSwcBoostResumeButton',
    }),
    'swc_boost_start': dict({
      'label': 'Boost Start',
      'type': 'IaquaSwcBoostStartButton',
    }),
    'swc_boost_stop': dict({
      'label': 'Boost Stop',
      'type': 'IaquaSwcBoostStopButton',
    }),
    'swc_low': dict({
      'is_on': False,
      'label': 'Swc Low',
      'type': 'IaquaBinarySensor',
    }),
    'swc_pool_set_point': dict({
      'current_value': 50.0,
      'label': 'Swc Pool Set Point',
      'max_value': 100.0,
      'min_value': 0.0,
      'step': 1.0,
      'type': 'IaquaSwcSetPoint',
      'unit_of_measurement': None,
    }),
    'swc_pool_status': dict({
      'label': 'Swc Pool Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'running',
      'value_translated': None,
    }),
    'swc_pool_value': dict({
      'label': 'Swc Pool Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_remaining_boost_hrs': dict({
      'label': 'Swc Remaining Boost Hrs',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '23',
      'value_translated': None,
    }),
    'swc_remaining_boost_mins': dict({
      'label': 'Swc Remaining Boost Mins',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '45',
      'value_translated': None,
    }),
    'swc_set_point': dict({
      'label': 'Swc Set Point',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
    'swc_spa_set_point': dict({
      'current_value': 50.0,
      'label': 'Swc Spa Set Point',
      'max_value': 100.0,
      'min_value': 0.0,
      'step': 1.0,
      'type': 'IaquaSwcSetPoint',
      'unit_of_measurement': None,
    }),
    'swc_spa_status': dict({
      'label': 'Swc Spa Status',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': 'standby',
      'value_translated': None,
    }),
    'swc_spa_value': dict({
      'label': 'Swc Spa Value',
      'type': 'IaquaSensor',
      'unit_of_measurement': None,
      'value': '50',
      'value_translated': None,
    }),
  })
# ---
